# onnxds

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  datasets.proto  datasets_pb2.py  read_dataset.py  readtest.py  tfgen_dataset.py
models/: BUILD.bazel
onnx/: BUILD.bazel  onnx.proto  onnx_pb2.py
onnxds/: BUILD.bazel  readtest.py
