
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

genrule(
    name = "onnx_to_local",
    srcs = ["@com_github_onnx_onnx//:proto3"],
    outs = ["onnx.proto"],
    cmd = "cp $< $@",
)

proto_library(
    name = "onnx_pb",
    srcs = [":onnx_to_local"],
    visibility = ["//visibility:public"],
)

# py_proto_library(
#     name = "onnx_py_pb",
#     srcs = [":onnx_to_local"],
#     visibility = ["//visibility:public"],
# )

py_library(
    name = "onnx_py_pb",
    srcs = ["onnx_pb2.py"],
    visibility = ["//visibility:public"],
)
